# bluetooth-firmware-bcm

./: CMakeLists.txt
firmware/: CMakeLists.txt
firmware/artik_bcmtool/: brcm_patchram_plus
firmware/bcm43012/: BCM43012B0_002.001.021.0081.0087.hex
packaging/: bluetooth-firmware-bcm.spec
scripts/: CMakeLists.txt  bt-dev-end-sdta7d.sh  bt-dev-end.sh  bt-dev-start-artik.sh  bt-dev-start-exynos3250.sh  bt-dev-start-exynos7270.sh  bt-dev-start-sdta7d.sh
