# install firmware
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BT_FW_BCM4330B1_002.001.003.0221.0265.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BT_FW_BCM4358A1_001.002.005.0032.0066.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM4345C0_003.001.025.0111.0205.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/BCM4354_003.001.012.0353.0745_Samsung_Artik_ORC.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/artik_bcmtool/brcm_patchram_plus DESTINATION ${PLUGIN_INSTALL_PREFIX}/bin)

# Gear S2
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4343w/BCM4343A1_001.002.009.0035.0096_ORC_Orbis_WC1-S.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm4343w/BCM4343A1_001.002.009.0022.0050_Murata_Type-1FR.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)

# TW2
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bcm43012/BCM43012B0_002.001.021.0081.0087.hex DESTINATION /lib/firmware/bcm43012/)

# RPI3
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/rpi3/BCM43430A1.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)

#SDTA7D
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sdta7d/BCM4335C0.hcd DESTINATION ${PLUGIN_INSTALL_PREFIX}/etc/bluetooth)
